--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "imageio>=2.36.1",
     "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
     "matplotlib>=3.9.3",
     "numpy>=2.0.2",
+    "optuna>=4.1.0",
     "pandas>=2.2.3",
+    "plotly>=5.24.1",
     "scikit-learn>=1.6.0",
     "scipy>=1.13.1",
+    "seaborn>=0.13.2",
 ]
