--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "imageio>=2.36.1",
     "ipykernel>=6.29.5",
     "jupyter>=1.1.1",
+    "kaleido==0.2.0",
     "matplotlib>=3.9.3",
     "numpy>=2.0.2",
     "optuna>=4.1.0",
@@ -16,4 +17,6 @@ dependencies = [
     "scikit-learn>=1.6.0",
     "scipy>=1.13.1",
     "seaborn>=0.13.2",
+    "streamlit>=1.41.1",
+    "watchdog>=6.0.0",
 ]
